# newsapi

./: .gitignore  README.md  pyproject.toml
server/: __init__.py  celery_app.py  constants.py  core.py  crud.py  db.py  model.py  schema.py
server/db/: __init__.py  crud.py
tests/: conftest.py  test_endpoints.py  test_news_api.py
